--- a/interests.html
+++ b/interests.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
-    <html>
-        <header>
-            <meta charset="UTF-8">
-            <title>Petros Kyres Qualifications</title>
-        </header>
-        <body>
-            <header>
-                <h1>Petros Kyres DDS,MSc</h1>
-                <img height=150px src="picture.jpg"/>
-            </header>
-            <hr>
-            <hr>
-            <section  class="languages" >
-                <h3><b>Programming Languages</b></h3>
-                <ol type="i">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>R</li>
-                    <li>Python</li>
-                    <li>Octave</li>
-                    <li>SQL</li>
-                </ol>
-            </section>
-            <section class="interests">
-                <h3>Interests</h3>
-                <ol type="1">
-                    <li>Dentistry</li>
-                    <li>Oral Surgery</li>
-                    <li>Web Development</li>
-                    <li>Data Analysis and Statistics</li>
-                    <li>Bioinformatics</li>
-                </ol>
-            </section>
-            <a href="./Home.html">Home</a>
-            <footer>
-                <p>&copy; 2021 Petros Kyres. All rights reserved</p>
-            </footer>
-        </body>
-    </html>
+<html lang="el">
+
+<head>
+    <meta charset="utf-8" />
+    <title>Κυρές Ενδιαφέροντα</title>
+    <link rel="stylesheet" href="homepage.css" type="text/css" />
+</head>
+
+<body>
+    <header>
+        <h1>Πέτρος Κυρές DDS, MSc</h1>
+        <h2>Χειρουργός Οδοντίατρος</h2>
+        <nav class="menu">
+            <ul>
+                <li><a href="index.html">Αρχική Σελίδα</a></li>
+                <li><a href="interests.html">Βιογραφικό</a></li>
+                <li><a href="contact.html">Επικοινωνία</a></li>
+            </ul>
+        </nav>
+        <hr>
+        <hr>
+    </header>
+
+    <main>
+        <h1>Υπο Κατασκευή</h1>
+        <br>
+        <hr>
+    </main>
+
+
+    <footer>
+        <footer>
+
+            <p>&copy; 2021 Petros Kyres. All rights reserved</p>
+        </footer>
+    </footer>
+</body>
+
+</html>
