--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Petros Kyres">
-    <meta name="keywords" content="Κυρές, Πέτρος, Οδοντίατρος, Βιοπληροφορική, Προγραμματισμός" />
+    <meta name="keywords" content="Κυρές, Πέτρος, Οδοντίατρος, Βιοπληροφορικός" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Πέτρος Κυρές</title>
@@ -15,7 +15,7 @@
 <body>
     <header>
         <h1>Πέτρος Κυρές DDS, MSc</h1>
-        <h2>Χειρουργός Οδοντίατρος, Βιοπληροφορικός και προγραμματιστής</h2>
+        <h2>Χειρουργός Οδοντίατρος, Βιοπληροφορικός</h2>
         <img src="images/picture.jpg" alt="photo" title="Petros Kyres" class="selfie" />
         <i class="fas fa-tooth fa-5x"></i>
         <i class="far fa-file-code fa-5x"></i>
@@ -39,8 +39,8 @@
                 μεταπτυχιακό στην Βιοπληροφορική από το Ιόνιο και το Ανοικτό Πανεπιστήμιο. Έχω υπηρετήσει ως οδοντίατρος
                 στο Εθνικό Συστημα Υγείας της Αγγλίας και ως επιμελητής Οδοντιατρικής στο Πανεπιστημιακό Νοσοκομείο
                 Ηρακλείου.
-                Αυτόν τον καιρό εργάζομαι ως συνεργάτης στο ιδιωτικό οδοντίατρείο "Σύγχρονη
-                Οδοντιατρική-Πάρης Μαραγκός". </p>
+                Αυτόν τον καιρό εργάζομαι ως συνεργαζόμενος οδοντίατρος στο ιδιωτικό οδοντίατρείο "Σύγχρονη
+                Οδοντιατρική-Πάρης Μαραγκός" ασκώντας όλο το φάσμα της οδοντιατρικής με έμφαση στις απονευρώσεις, θεραπείες ούλων και στις περιπλεγμένες εξαγωγές δοντιών. </p>
         </article>
         <br>
         <h3>Εξωτερικοί Σύνδεσμοι</h3>
