--- a/cv.html
+++ b/cv.html
@@ -26,11 +26,11 @@
         <h3><u>Τριτοβάθμια εκπαίδευση</u></h3>
         <p>
             <strong>2001: </strong>Eισαγωγή στην Οδοντιατρική ΕΚΠΑ μετά από πανελλήνιες εξετάσεις.<br>
-            <strong>Μάιος 2008 :</strong> Πτυχίο Οδοντιατρικής ΕΚΠΑ με βαθμό 6,92 (Λίαν Καλώς).<br>
+            <strong>Μάιος 2008 :</strong> Πτυχίο Οδοντιατρικής ΕΚΠΑ με βαθμό Λίαν Καλώς.<br>
             <strong>Αύγουστος 2021 :</strong> Master of Science στην Βιοπληροφορική και Νευροπληροφορική στο
             Ελληνικό
             Ανοικτό & Ιόνιο
-            Πανεπιστήμιο με βαθμό 9.9 (Άριστα).
+            Πανεπιστήμιο με βαθμό Άριστα.
         </p>
 
         <h3><u>Στρατιωτική Θητεία</u></h3>
@@ -354,6 +354,7 @@
             <li>Μέλος του General Dental Council χωρίς περιορισμούς (2012-2016,2021- Σήμερα) </li>
             <li>Performer number ασκησης NHS Οδοντιατρικής στην Αγγλία χωρίς περιορισμούς (2013-2016)</li>
             <li>Μέλος της Ελληνικής Εταιρίας Νοσοκομειακής Οδοντιατρικής (2016- Σήμερα)</li>
+            <li>Εκλεγμένο μέλος στο Διοικητικό Συμβούλιο του Οδοντιατρικού Συλλόγου Ηρακλέιου(2017-2019) ως ανεξάρτητη υποψηφιότητα στις εκλογές του Συλλόγου</li>
         </ol>
 
         <h3>Εθελοντισμός</h3>
