--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 
         <br>
         <h3>Φόρμα Επικοινωνίας</h3>
-        <form>
+        <form action="https://formsubmit.co/petrandent@yahoo.gr" action="POST">
             <label for="name">Όνομα</label>
             <input id="name" name="name" type="text" autocomplete="on" /><br>
             <label for="phone">Τηλέφωνο</label>
